syntax = "proto3";

package txset_state;

message TxSetStateValue {
    uint64 nonce = 1;
    uint64 index = 2;
    uint64 size = 3;
    repeated uint64 blockFor = 4 [packed=true];
}